<resources>
    <string name="app_name">Notlarım</string>

    <string name="welcome1_title">Hadi başlayalım</string>
    <string name="welcome1_text">Notlarım Uygulamasına Hoşgeldiniz</string>

    <string name="welcome2_title">Notunuzu oluşturun</string>
    <string name="welcome2_text">Artık notlarınızı unutmadan mobil uygulamanızda saklayabilirsiniz.</string>

    <string name="welcome3_title">Gruba göre listeleyin</string>
    <string name="welcome3_text">Yapılacak, Yapılıyor ve Tamamlandı olarak notlarınızı gruplandırabilirsiniz.
</string>

    <string name="next">İleri</string>

    <string name="sing_in">Giriş Yap</string>
    <string name="prompt_email">Email Adresi</string>
    <string name="prompt_password">Şifre</string>
    <string name="prompt_password_comfirm">Şifre (Tekrar)</string>
    <string name="forgot_password">Şifremi unuttum</string>
    <string name="dont_have_account">Hesabınız yok mu? </string>
    <string name="sing_up">Kayıt ol</string>
    <string name="save">Kaydet</string>
    <string name="remember_me">Beni hatırla!</string>

    <string name="prompt_name">İsim</string>
    <string name="prompt_surname">Soyisim</string>
    <string name="prompt_phone">Telefon (11 hane)</string>
    <string name="user_aggreement"><font color='#EA907A'>Gizlilik İlkeleri</font> ni okudum, onaylıyorum</string>
    <string name="have_an_account">Zetan hesabınız var mı? </string>
    <string name="password_length_message">Şifre en az 6 karakterden oluşmalı</string>
    <string name="fill_message">lütfen doldurunuz</string>
    <string name="wrong_format">yanlış format</string>
    <string name="password_dont_match">şifreler eşleşmiyor</string>
    <string name="dont_have_note">Henüz notunuz yok.</string>

    <string name="add_note">Yeni not ekle</string>
    <string name="edit_note">Notu düzenle</string>

</resources>