<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/logo"
                    android:scaleType="fitXY"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_below="@+id/logo"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="32dp">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sing_up"
                        android:textColor="@color/my_pink"
                        android:textAlignment="center"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginRight="50dp"
                        android:layout_marginLeft="50dp"
                        android:fontFamily="@font/baloo_bhai_bold"
                        android:textSize="19sp"/>


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextName"
                        android:textSize="14sp"
                        android:paddingLeft="16dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:hint="@string/prompt_name"
                        />



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextSurName"
                        android:textSize="14sp"
                        android:paddingLeft="16dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:hint="@string/prompt_surname"
                        android:layout_marginTop="6dp"
                        />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextTel"
                        android:textSize="14sp"
                        android:paddingLeft="16dp"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:hint="@string/prompt_phone"
                        android:nextFocusDown="@id/editTextTel"
                        android:layout_marginTop="6dp"
                        />



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextEmail"
                        android:textSize="14sp"
                        android:paddingLeft="16dp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:hint="@string/prompt_email"
                        android:layout_marginTop="6dp"
                        />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="6dp"
                        android:weightSum="2">
                        <EditText
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextPassword"
                            android:textSize="14sp"
                            android:paddingLeft="16dp"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/prompt_password"
                            />

                        <EditText

                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextPasswordConfirm"
                            android:textSize="14sp"
                            android:paddingLeft="16dp"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/prompt_password_comfirm"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linear2"
                        android:layout_marginTop="12dp"
                        >
                        <CheckBox
                            android:id="@+id/chkUserAgreement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp"
                            style="@style/MyCheckBox"
                            android:button="@drawable/check_box_selector"
                            android:paddingLeft="4dp"
                            />

                        <TextView
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/user_aggreement"
                            android:layout_toRightOf="@+id/chkUserAgreement"
                            />


                    </LinearLayout>

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/btn_fill_oval"
                        android:fontFamily="@font/baloo_bhai_regular"
                        android:onClick="btnSignUpClicked"
                        android:text="@string/sing_up"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_below="@+id/btnSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/have_an_account"
                            android:layout_below="@+id/btnLogin"
                            android:textSize="14sp"
                            />

                        <TextView
                            android:id="@+id/txtSignIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:onClick="txtSignInClicked"
                            android:text="@string/sing_in"
                            android:textColor="@color/my_pink"
                            android:textSize="14sp"
                            android:layout_marginLeft="4dp"/>
                    </LinearLayout>


                </LinearLayout>



            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="300dp"
                android:visibility="gone"
                />


        </FrameLayout>


    </ScrollView>
</layout>

