<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo"
            android:scaleType="fitXY"
            />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:visibility="gone"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/logo">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_in"
                    android:textColor="@color/my_pink"
                    android:textAlignment="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:fontFamily="@font/baloo_bhai_bold"
                    android:textSize="19sp"/>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtTitle"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextEmail"
                        android:textSize="16dp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:hint="@string/prompt_email"
                        android:nextFocusDown="@id/editTextPassword"
                        android:drawableLeft="@drawable/ic_baseline_email_24"
                        android:paddingLeft="16dp"
                        android:drawablePadding="16dp"
                        android:focusedByDefault="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/textInputEmail">
                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textSize="16dp"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:paddingLeft="16dp"
                        android:drawablePadding="16dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/txtForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="14sp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textInputPassword"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/my_pink"
                    />

                <CheckBox
                    android:id="@+id/chkBeniHatirla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/remember_me"
                    android:textColor="@android:color/darker_gray"
                    style="@style/MyCheckBox"
                    android:layout_below="@+id/textInputPassword"
                    android:button="@drawable/check_box_selector"
                    />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/txtForgot"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/btn_fill_oval"
                    android:onClick="btnSignInClick"
                    android:text="@string/sing_in"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_below="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="32dp"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:layout_below="@+id/btnLogin"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:id="@+id/txtRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btnLogin"
                        android:clickable="true"
                        android:onClick="txtSignUpClicked"
                        android:text="@string/sing_up"
                        android:textColor="@color/my_pink"
                        android:textSize="14sp"
                        android:layout_marginLeft="4dp"/>
                </LinearLayout>

            </RelativeLayout>
        </ScrollView>




    </RelativeLayout>
</layout>

